--- a/style.css
+++ b/style.css
@@ -16,30 +16,42 @@
 body {
     color: #444;
     font-family: 'Cinzel';
+    padding: 50px;
     background: linear-gradient(to bottom right, #67b26f, #4ca2cd);
     height: 100vh;
+
+    display: flex;
+    /* cross axis */
+    align-items: center;  
+    /* main axis */
+    justify-content: center;
 }
 
 .pizza {
     max-width: 800px;
     border-radius: 4px;
     box-shadow: 0 30px 80px 10px rgb(0, 0, 0, .2);
+
     display: flex;
+    align-items: stretch;
+
 }
 
 .pizza__hero {
+    flex: 0 0 45%;
+}
 
+.pizza__img {
+    width: 37%;
+    display: block;
 }
 
 .pizza__content {
+    flex: 1;
     background: white;
 }
 
 .pizza__price {
     background: linear-gradient(to bottom, #67b26f, #4ca2cd);
-
-}
-
-.pizza__img {
-    width: 100%;
+    flex: 0 0 50px;
 }
