--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
 .pizza__content {
     flex: 1;
     background: white;
+    padding: 35px 30px;
 }
 
 .pizza__price {
@@ -61,4 +62,31 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.pizza__title{
+    display: flex;
+    align-items: center;
+}
+
+.pizza__heading{
+    font-size: 20px;
+    flex: 1;
+}
+
+.pizza__tag{
+    font-size: 10px;
+    text-transform: uppercase;
+    color: white;
+    padding: 2px 7px;
+    border-radius: 100px;
+    margin-left: 7px;
+}
+
+.pizza__tag--1{
+    background-color: #67b26f;
+}
+
+.pizza__tag--2{
+    background-color: #4ca2cd;
 }
