--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     color: #444;
     font-family: 'Cinzel';
     padding: 50px;
-    background: linear-gradient(to bottom left, #019af3b4, #bd00f688);
+    background: linear-gradient(to bottom left, #eb4300, #0a08f1);
     height: 100vh;
 
     display: flex;
@@ -57,7 +57,7 @@ body {
 
 .pizza__price {
     flex: 0 0 50px;
-    background: linear-gradient(to bottom, #67b26f, #4ca2cd);
+    background: linear-gradient(to bottom, #3904d9, #02e310);
     writing-mode: vertical-rl;
     color: white;
     font-size: 18px;
